[build] Fixed ICU build on Linux.

--- a/3party/icu/CMakeLists.txt
+++ b/3party/icu/CMakeLists.txt
@@ -6,7 +6,9 @@ add_definitions(
   -DU_COMMON_IMPLEMENTATION
   -DU_I18N_IMPLEMENTATION
   -DU_NO_DEFAULT_INCLUDE_UTF_HEADERS
-  -DU_DISABLE_RENAMING)
+  -DU_DISABLE_RENAMING
+  -DU_ENABLE_DYLOAD=0
+)
 
 set(CMAKE_PREFIX_PATH ./)
 
