--- a/drape_frontend/CMakeLists.txt
+++ b/drape_frontend/CMakeLists.txt
@@ -70,6 +70,7 @@ set(
   drape_api_renderer.hpp
   drape_engine.cpp
   drape_engine.hpp
+  drape_hints.hpp
   drape_measurer.cpp
   drape_measurer.hpp
   engine_context.cpp
