--- a/local_ads/local_ads_tests/CMakeLists.txt
+++ b/local_ads/local_ads_tests/CMakeLists.txt
@@ -3,7 +3,8 @@ project(local_ads_tests)
 set(
   SRC
   campaign_serialization_test.cpp
-  local_ads_helpers_tests.cpp
+  file_helpers_tests.cpp
+  statistics_tests.cpp
 )
 
 omim_add_test(${PROJECT_NAME} ${SRC})
@@ -12,6 +13,7 @@ omim_link_libraries(
   ${PROJECT_NAME}
   local_ads
   coding
+  geometry
   platform
   platform_tests_support
   base
