--- a/xcode/common.xcconfig
+++ b/xcode/common.xcconfig
@@ -18,7 +18,7 @@ SUPPORTED_PLATFORMS = macosx iphonesimulator iphoneos
 
 // Linked frameworks
 OTHER_LDFLAGS[sdk=macosx*] = -framework Cocoa -framework IOKit -framework OpenGL -framework QtCore -framework QtGui -framework QtNetwork -framework QtOpenGL -framework QtWidgets -framework SystemConfiguration -framework CFNetwork
-OTHER_LDFLAGS[sdk=iphone*] = -framework AdSupport -framework CoreGraphics -framework Foundation -framework IOKit -framework OpenGLES -framework SystemConfiguration -framework UIKit -framework CFNetwork
+OTHER_LDFLAGS[sdk=iphone*] = -framework AdSupport -framework CoreGraphics -framework Foundation -framework IOKit -framework OpenGLES -framework SystemConfiguration -framework UIKit -framework CFNetwork -ObjC
 
 // Warnings settings
 CLANG_WARN_BOOL_CONVERSION = YES
