[build] Fixed linux cmake build.

--- a/search/search_quality/search_quality_tests/CMakeLists.txt
+++ b/search/search_quality/search_quality_tests/CMakeLists.txt
@@ -9,10 +9,17 @@ omim_add_test(${PROJECT_NAME} ${SRC})
 omim_link_libraries(
   ${PROJECT_NAME}
   search_quality
+  indexer
+  editor
   platform
   coding
+  geometry
   base
+  icu
   jansson
+  oauthcpp
+  opening_hours
+  pugixml
   stats_client
   ${LIBZ}
 )
