--- a/map/CMakeLists.txt
+++ b/map/CMakeLists.txt
@@ -45,6 +45,7 @@ set(
   gps_tracker.hpp
   local_ads_manager.cpp
   local_ads_manager.hpp
+  local_ads_supported_types.cpp
   mwm_tree.cpp
   mwm_tree.hpp
   mwm_url.cpp
