Added new realization of right-to-left text reordering with BiDi algorithm from ICU library.

--- a/drape/CMakeLists.txt
+++ b/drape/CMakeLists.txt
@@ -9,9 +9,13 @@ execute_process(
   shader_def
 )
 
+add_definitions(-DU_DISABLE_RENAMING)
+
 include_directories(
   ${OMIM_ROOT}/3party/freetype/include
   ${OMIM_ROOT}/3party/glm
+  ${OMIM_ROOT}/3party/icu/common
+  ${OMIM_ROOT}/3party/icu/i18n
 )
 
 set(
