[routing] Get road access by vehicle type; masks are for serialization only.

--- a/routing/CMakeLists.txt
+++ b/routing/CMakeLists.txt
@@ -127,6 +127,7 @@ set(
   turns_sound_settings.hpp
   turns_tts_text.cpp
   turns_tts_text.hpp
+  vehicle_mask.cpp  
   vehicle_mask.hpp
   world_graph.cpp
   world_graph.hpp
