Added Subpixel Morphological Antialiasing (SMAA)

--- a/drape_frontend/CMakeLists.txt
+++ b/drape_frontend/CMakeLists.txt
@@ -145,6 +145,8 @@ set(
   path_text_shape.hpp
   poi_symbol_shape.cpp
   poi_symbol_shape.hpp
+  postprocess_renderer.cpp
+  postprocess_renderer.hpp
   read_manager.cpp
   read_manager.hpp
   read_mwm_task.cpp
@@ -274,6 +276,12 @@ set(
   shaders/screen_quad.vsh.glsl
   shaders/shader_index.txt
   shaders/shaders_lib.glsl
+  shaders/smaa_blending_weight.fsh.glsl
+  shaders/smaa_blending_weight.vsh.glsl
+  shaders/smaa_edges.fsh.glsl
+  shaders/smaa_edges.vsh.glsl
+  shaders/smaa_final.fsh.glsl
+  shaders/smaa_final.vsh.glsl
   shaders/solid_color.fsh.glsl
   shaders/text.fsh.glsl
   shaders/text.vsh.glsl
