[routing] track analyzer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -340,6 +340,7 @@ if (PLATFORM_DESKTOP)
   add_subdirectory(openlr)
   add_subdirectory(generator)
   add_subdirectory(skin_generator)
+  add_subdirectory(track_analyzing)
 endif()
 
 omim_add_test_subdirectory(qt_tstfrm)
