--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -141,8 +141,12 @@
         <category android:name="android.intent.category.BROWSABLE"/>
 
         <data
-          android:host="lead"
-          android:scheme="mapsme"/>
+          android:host="lead.maps.me"
+          android:scheme="http"/>
+
+        <data
+          android:host="lead.maps.me"
+          android:scheme="https"/>
       </intent-filter>
 
       <!-- API CALL -->
