[android] Changed lead url scheme from http/https to mapsme. And domain: lead.maps.me -> lead.

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -141,12 +141,8 @@
         <category android:name="android.intent.category.BROWSABLE"/>
 
         <data
-          android:host="lead.maps.me"
-          android:scheme="http"/>
-
-        <data
-          android:host="lead.maps.me"
-          android:scheme="https"/>
+          android:host="lead"
+          android:scheme="mapsme"/>
       </intent-filter>
 
       <!-- API CALL -->
