[android] added mapswithme scheme

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -143,6 +143,9 @@
         <data
           android:host="lead"
           android:scheme="mapsme"/>
+        <data
+          android:host="lead"
+          android:scheme="mapswithme"/>
       </intent-filter>
 
       <!-- API CALL -->
