--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,38 +2,14 @@ cmake_minimum_required(VERSION 3.2)
 
 project(omim C CXX)
 
-set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-
-# Set environment variables
-
-set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})
-set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})
-
-if ($ENV{QT_PATH})
-  set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} $ENV{QT_PATH})
+# Options
+option(BUILD_DESIGNER "Build application as design tool" OFF)
+if (BUILD_DESIGNER)
+  message("Designer tool building is enabled")
+  add_definitions(-DBUILD_DESIGNER)
 else()
-  set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "/usr/local/opt/qt5")
+  message("Designer tool building is disabled")
 endif()
-
-if (NOT CMAKE_BUILD_TYPE)
-  set(CMAKE_BUILD_TYPE "Release")
-endif()
-
-if ("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
-  add_definitions(-DDEBUG)
-endif()
-
-if ("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
-  add_definitions(-DRELEASE)
-endif()
-
-if (NOT SKIP_TESTS)
-  set(SKIP_TESTS FALSE)
-endif()
-
-add_definitions(-DBUILD_DESIGNER)
-
-# End of setting environment variables
 
 # Set target platform:
 function(omim_set_platform_var PLATFORM_VAR pattern)
@@ -160,6 +136,8 @@ if (NOT PLATFORM_IPHONE AND NOT PLATFORM_ANDROID)
   find_package(Qt5Gui REQUIRED)
   find_package(Qt5OpenGL REQUIRED)
   find_package(Qt5Widgets REQUIRED)
+  find_package(Qt5Xml REQUIRED)
+  find_package(Qt5Svg REQUIRED)
 endif()
 
 if (PLATFORM_LINUX)
@@ -348,6 +326,7 @@ add_subdirectory(local_ads)
 if (PLATFORM_DESKTOP)
   add_subdirectory(openlr)
   add_subdirectory(generator)
+  add_subdirectory(skin_generator)
 endif()
 
 omim_add_test_subdirectory(qt_tstfrm)
