Added routing manager to cmake and qmake

--- a/map/CMakeLists.txt
+++ b/map/CMakeLists.txt
@@ -54,6 +54,8 @@ set(
   place_page_info.hpp
   reachable_by_taxi_checker.cpp
   reachable_by_taxi_checker.hpp
+  routing_manager.cpp
+  routing_manager.hpp
   track.cpp
   track.hpp
   traffic_manager.cpp
