--- a/partners_api/partners_api_tests/CMakeLists.txt
+++ b/partners_api/partners_api_tests/CMakeLists.txt
@@ -8,6 +8,7 @@ set(
   booking_tests.cpp
   cian_tests.cpp
   facebook_tests.cpp
+  google_tests.cpp
   mopub_tests.cpp
   rb_tests.cpp
   taxi_engine_tests.cpp
