--- a/ugc/CMakeLists.txt
+++ b/ugc/CMakeLists.txt
@@ -4,7 +4,9 @@ set(
   SRC
   api.cpp
   api.hpp
+  serdes.hpp
   types.hpp
 )
 
 add_library(${PROJECT_NAME} ${SRC})
+omim_add_test_subdirectory(ugc_tests)
