--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -345,6 +345,8 @@
 
     <activity android:name="com.mopub.common.MoPubBrowser" android:configChanges="keyboardHidden|orientation|screenSize"/>
 
+    <activity android:name=".ugc.UGCEditorActivity" android:configChanges="keyboardHidden|orientation|screenSize"/>
+
     <receiver
         android:name="com.mapswithme.maps.background.ConnectivityChangedReceiver"
         android:enabled="true"
