--- a/ugc/ugc_tests/CMakeLists.txt
+++ b/ugc/ugc_tests/CMakeLists.txt
@@ -3,12 +3,14 @@ project(ugc_tests)
 set(
   SRC
   serdes_tests.cpp
+  serdes_json_tests.cpp
 )
 
 omim_add_test(${PROJECT_NAME} ${SRC})
 omim_link_libraries(
   ${PROJECT_NAME}
   ugc
+  jansson
   indexer
   platform
   coding
@@ -17,5 +19,4 @@ omim_link_libraries(
   stats_client
   ${LIBZ}
 )
-
 link_qt5_core(${PROJECT_NAME})
