--- a/partners_api/partners_api_tests/CMakeLists.txt
+++ b/partners_api/partners_api_tests/CMakeLists.txt
@@ -9,8 +9,10 @@ set(
   facebook_tests.cpp
   mopub_tests.cpp
   rb_tests.cpp
+  taxi_engine_tests.cpp
   uber_tests.cpp
   viator_tests.cpp
+  yandex_tests.cpp
 )
 
 omim_add_test(${PROJECT_NAME} ${SRC})
