--- a/data/editor.config
+++ b/data/editor.config
@@ -1,5 +1,9 @@
 <?xml version="1.0"?>
 <mapsme>
+  <!-- After editing, validate this with
+       xmllint -schema config.xsd editor.config >/dev/null
+       (only use double dashes for schema)
+  -->
   <editor>
     <disable everywhere="no">
       <!--bbox minlon="37.6120" minlat="55.7479" maxlon="37.6239" maxlat="55.7553" editable="no" /-->
@@ -457,7 +461,13 @@
       <type id="office-government" group="office">
         <include group="poi" />
       </type>
+      <type id="office-insurance" group="office">
+        <include group="poi" />
+      </type>
       <type id="office-lawyer" group="office">
+        <include group="poi" />
+      </type>
+      <type id="office-ngo" group="office">
         <include group="poi" />
       </type>
       <type id="office-telecommunication" group="office">
@@ -735,11 +745,6 @@
       <type id="tourism-viewpoint">
         <include field="name" />
       </type>
-      <type id="waterway-waterfall" can_add="no">
-        <include field="name" />
-        <include field="height" />
-        <include field="wikipedia" />
-      </type>
       <type id="amenity-bench" />
       <type id="amenity-shelter">
         <include field="internet" />
@@ -756,12 +761,47 @@
       <type id="amenity-bicycle_parking">
         <include field="operator" />
       </type>
+      <type id="amenity-biergarten" group="food">
+        <include group="poi" />
+        <include field="internet" />
+      </type>
       <type id="amenity-community_centre">
         <include group="poi" />
         <include field="internet" />
       </type>
       <type id="amenity-courthouse">
         <include group="poi" />
+      </type>
+      <type id="amenity-driving_school" group="education">
+        <include group="poi" />
+      </type>
+      <type id="amenity-internet_cafe">
+        <include group="poi" />
+        <include field="operator" />
+      </type>
+      <type id="amenity-motorcycle_parking">
+        <include field="operator" />
+      </type>
+      <type id="amenity-ice_cream" group="shop">
+        <include group="poi" />
+      </type>
+      <type id="amenity-nursing_home">
+        <include group="poi" />
+      </type>
+      <type id="amenity-payment_terminal">
+        <include field="operator" />
+      </type>
+      <type id="amenity-shower">
+        <include group="poi" />
+      </type>
+      <type id="amenity-water_point">
+        <include group="poi" />
+        <include field="internet" />
+        <include field="operator" />
+      </type>
+      <type id="emergency-defibrillator">
+      </type>
+      <type id="emergency-fire_hydrant">
       </type>
       <type id="emergency-phone">
         <include field="phone" />
@@ -770,8 +810,14 @@
       <type id="highway-rest_area">
         <include field="internet" />
       </type>
+      <type id="highway-services" can_add="no">
+        <include field="internet" />
+      </type>
       <type id="leisure-fitness_centre">
         <include group="poi" />
+        <include field="internet" />
+      </type>
+      <type id="leisure-fitness_station">
         <include field="internet" />
       </type>
       <type id="leisure-sauna">
@@ -788,10 +834,51 @@
       <type id="shop-bookmaker">
         <include group="poi" />
       </type>
+      <type id="shop-erotic" group="shop">
+        <include group="poi" />
+      </type>
+      <type id="shop-fabric" group="shop" can_add="no">
+        <include group="poi" />
+      </type>
+      <type id="shop-funeral_directors">
+        <include group="poi" />
+      </type>
+      <type id="shop-massage">
+        <include group="poi" />
+        <include field="internet" />
+      </type>
+      <type id="shop-music" group="shop" can_add="no">
+        <include group="poi" />
+      </type>
+      <type id="shop-musical_instrument" group="shop" can_add="no">
+        <include group="poi" />
+      </type>
+      <type id="shop-motorcycle" group="shop">
+        <include group="poi" />
+      </type>
+      <type id="shop-newsagent" group="shop">
+        <include group="poi" />
+      </type>
+      <type id="shop-pawnbroker">
+        <include group="poi" />
+      </type>
+      <type id="shop-stationery" group="shop">
+        <include group="poi" />
+      </type>
       <type id="shop-seafood" group="shop">
         <include group="poi" />
       </type>
+      <type id="shop-tattoo">
+        <include group="poi" />
+        <include field="internet" />
+      </type>
       <type id="shop-ticket" group="shop">
+        <include group="poi" />
+      </type>
+      <type id="shop-variety_store" group="shop">
+        <include group="poi" />
+      </type>
+      <type id="shop-video" group="shop" can_add="no">
         <include group="poi" />
       </type>
       <type id="shop-wine" group="shop">
@@ -821,7 +908,7 @@
         <tag k="tourism" v="information" />
         <tag k="information" v="board" />
         <include group="poi" />
-        <include group="internet" />
+        <include field="internet" />
       </type>
       <type id="tourism-information-board">
         <tag k="tourism" v="information" />
@@ -863,6 +950,19 @@
       </type>
       <type id="building-address" can_add="no">
         <include group="address" />
+      </type>
+      <type id="man_made-surveillance">
+      </type>
+      <type id="tourism-theme_park" can_add="no">
+        <include group="poi" />
+        <include field="internet" />
+        <include field="operator" />
+      </type>
+      <type id="tourism-wilderness_hut" group="accomodation">
+        <include group="poi" />
+        <include field="internet" />
+      </type>
+      <type id="man_made-water_tap">
       </type>
     </types>
     <preferred_types>
