--- a/routing/routing_tests/CMakeLists.txt
+++ b/routing/routing_tests/CMakeLists.txt
@@ -26,6 +26,7 @@ set(
   road_graph_builder.hpp
   road_graph_nearest_edges_test.cpp
   route_tests.cpp
+  routing_helpers_tests.cpp
   routing_mapping_test.cpp
   routing_session_test.cpp
   turns_generator_test.cpp
