[base] Added Skew|DC3 algorithm for suffix array construction.

--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -61,6 +61,8 @@ set(
   string_utils.hpp
   strings_bundle.cpp
   strings_bundle.hpp
+  suffix_array.cpp
+  suffix_array.hpp
   sunrise_sunset.cpp
   sunrise_sunset.hpp
   thread.cpp
