[routing] Fix compilation for routing benchmarks, add cmake

--- a/routing/CMakeLists.txt
+++ b/routing/CMakeLists.txt
@@ -135,3 +135,4 @@ add_library(${PROJECT_NAME} ${SRC})
 omim_add_test_subdirectory(routing_tests)
 omim_add_test_subdirectory(routing_integration_tests)
 omim_add_test_subdirectory(routing_consistency_tests)
+omim_add_test_subdirectory(routing_benchmarks)
