--- a/base/base_tests/CMakeLists.txt
+++ b/base/base_tests/CMakeLists.txt
@@ -7,6 +7,7 @@ set(
   assert_test.cpp
   bits_test.cpp
   buffer_vector_test.cpp
+  bwt_tests.cpp
   cache_test.cpp
   collection_cast_test.cpp
   condition_test.cpp
