[MAPSME-4614] [ios] Added yandextaxi scheme to queries list.

--- a/iphone/Maps/MAPSME.plist
+++ b/iphone/Maps/MAPSME.plist
@@ -100,6 +100,7 @@
 		<string>fbauth2</string>
 		<string>fbshareextension</string>
 		<string>uber</string>
+		<string>yandextaxi</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
