--- a/routing/CMakeLists.txt
+++ b/routing/CMakeLists.txt
@@ -16,6 +16,7 @@ set(
   base/followed_polyline.hpp
   bicycle_directions.cpp
   bicycle_directions.hpp
+  checkpoints.cpp
   checkpoints.hpp
   coding.hpp
   cross_mwm_connector.cpp
