[base][coding] Burrows-Wheeler coder.

--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -36,6 +36,8 @@ set(
   math.hpp
   matrix.hpp
   mem_trie.hpp
+  move_to_front.cpp
+  move_to_front.hpp
   mutex.hpp
   newtype.hpp
   normalize_unicode.cpp
