[coding] Compressed text storage.

--- a/coding/CMakeLists.txt
+++ b/coding/CMakeLists.txt
@@ -72,6 +72,7 @@ set(
   streams_common.hpp
   streams_sink.hpp
   succinct_mapper.hpp
+  text_storage.hpp
   traffic.cpp
   traffic.hpp
   transliteration.cpp
