[MAPSME-4906] [ios] Fixed check if phone call available in place page.

--- a/iphone/Maps/MAPSME.plist
+++ b/iphone/Maps/MAPSME.plist
@@ -101,6 +101,7 @@
 		<string>fbshareextension</string>
 		<string>uber</string>
 		<string>yandextaxi</string>
+		<string>tel</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
