--- a/xcode/common-debug.xcconfig
+++ b/xcode/common-debug.xcconfig
@@ -4,6 +4,6 @@ COPY_PHASE_STRIP = NO
 GCC_OPTIMIZATION_LEVEL = 0
 GCC_UNROLL_LOOPS = NO
 ENABLE_NS_ASSERTIONS = YES
-GCC_PREPROCESSOR_DEFINITIONS = $(inherited) DEBUG _DEBUG
+GCC_PREPROCESSOR_DEFINITIONS = $(inherited) DEBUG _DEBUG HAVE_PTHREAD
 MTL_ENABLE_DEBUG_INFO = YES
 ENABLE_TESTABILITY = YES
