[editor] Enable creation for several categories

--- a/data/editor.config
+++ b/data/editor.config
@@ -201,7 +201,7 @@
         <include field="operator" />
         <include field="internet" />
       </type>
-      <type id="amenity-college" group="education" can_add="no">
+      <type id="amenity-college" group="education">
         <include group="poi" />
         <include field="operator" />
       </type>
@@ -455,7 +455,10 @@
         <include group="poi" />
         <include field="internet" />
       </type>
-      <type id="office-company" group="office" can_add="no">
+      <type id="office-company" group="office">
+        <include group="poi" />
+      </type>
+      <type id="office-estate_agent" group="office">
         <include group="poi" />
       </type>
       <type id="office-government" group="office">
@@ -825,6 +828,7 @@
       </type>
       <type id="man_made-chimney" />
       <type id="man_made-water_well" />
+      <type id="man_made-water_tower" />
       <type id="shop-cosmetics" group="shop">
         <include group="poi" />
       </type>
