Clang 3party lib warning supression.

--- a/3party/freetype/CMakeLists.txt
+++ b/3party/freetype/CMakeLists.txt
@@ -10,6 +10,12 @@ add_compile_options(
   "-Wall"
 )
 
+if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(
+    "-Wno-unused-function"
+  )
+endif()
+
 include_directories(include)
 
 set(
