--- a/3party/minizip/CMakeLists.txt
+++ b/3party/minizip/CMakeLists.txt
@@ -2,6 +2,12 @@ project(minizip)
 
 add_definitions(-DUSE_FILE32ZPI -DNOCRYPT)
 
+if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(
+    "-Wno-unused-value"
+  )
+endif()
+
 set(
   SRC
   ioapi.c
