--- a/3party/liboauthcpp/CMakeLists.txt
+++ b/3party/liboauthcpp/CMakeLists.txt
@@ -2,6 +2,12 @@ project(oauthcpp)
 
 include_directories(include src)
 
+if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(
+    "-Wno-shorten-64-to-32"
+  )
+endif()
+
 set(
   SRC
   include/liboauthcpp/liboauthcpp.h
