--- a/3party/sdf_image/CMakeLists.txt
+++ b/3party/sdf_image/CMakeLists.txt
@@ -1,5 +1,11 @@
 project(sdf_image)
 
+if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(
+    "-Wno-shorten-64-to-32"
+  )
+endif()
+
 set(
   SRC
   sdf_image.cpp
