--- a/3party/freetype/CMakeLists.txt
+++ b/3party/freetype/CMakeLists.txt
@@ -10,11 +10,9 @@ add_compile_options(
   "-Wall"
 )
 
-if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  add_compile_options(
-    "-Wno-unused-function"
-  )
-endif()
+add_clang_compile_options(
+  "-Wno-unused-function"
+)
 
 include_directories(include)
 
