--- a/3party/liboauthcpp/CMakeLists.txt
+++ b/3party/liboauthcpp/CMakeLists.txt
@@ -2,11 +2,9 @@ project(oauthcpp)
 
 include_directories(include src)
 
-if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  add_compile_options(
-    "-Wno-shorten-64-to-32"
-  )
-endif()
+add_clang_compile_options(
+  "-Wno-shorten-64-to-32"
+)
 
 set(
   SRC
