--- a/3party/osrm/CMakeLists.txt
+++ b/3party/osrm/CMakeLists.txt
@@ -6,11 +6,9 @@ include_directories(
   ${OMIM_ROOT}/3party/osrm/osrm-backend/third_party
 )
 
-if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  add_compile_options(
-    "-Wno-overloaded-virtual"
-  )
-endif()
+add_clang_compile_options(
+  "-Wno-overloaded-virtual"
+)
 
 set(
   SRC
