--- a/3party/icu/CMakeLists.txt
+++ b/3party/icu/CMakeLists.txt
@@ -10,9 +10,7 @@ add_definitions(
   -DU_ENABLE_DYLOAD=0
 )
 
-add_clang_compile_options(
-  "-Wno-deprecated-declarations"
-)
+add_clang_compile_options("-Wno-deprecated-declarations")
 
 set(CMAKE_PREFIX_PATH ./)
 
