--- a/3party/freetype/CMakeLists.txt
+++ b/3party/freetype/CMakeLists.txt
@@ -6,13 +6,9 @@ if (PLATFORM_LINUX AND CMAKE_COMPILER_IS_GNUCXX)
   add_definitions(-DOMIM_FULL_FREETYPE)
 endif ()
 
-add_compile_options(
-  "-Wall"
-)
+add_compile_options("-Wall")
 
-add_clang_compile_options(
-  "-Wno-unused-function"
-)
+add_clang_compile_options("-Wno-unused-function")
 
 include_directories(include)
 
