--- a/3party/liboauthcpp/CMakeLists.txt
+++ b/3party/liboauthcpp/CMakeLists.txt
@@ -2,9 +2,7 @@ project(oauthcpp)
 
 include_directories(include src)
 
-add_clang_compile_options(
-  "-Wno-shorten-64-to-32"
-)
+add_clang_compile_options("-Wno-shorten-64-to-32")
 
 set(
   SRC
