--- a/3party/minizip/CMakeLists.txt
+++ b/3party/minizip/CMakeLists.txt
@@ -2,9 +2,7 @@ project(minizip)
 
 add_definitions(-DUSE_FILE32ZPI -DNOCRYPT)
 
-add_clang_compile_options(
-  "-Wno-unused-value"
-)
+add_clang_compile_options("-Wno-unused-value")
 
 set(
   SRC
