--- a/3party/sdf_image/CMakeLists.txt
+++ b/3party/sdf_image/CMakeLists.txt
@@ -1,8 +1,6 @@
 project(sdf_image)
 
-add_clang_compile_options(
-  "-Wno-shorten-64-to-32"
-)
+add_clang_compile_options("-Wno-shorten-64-to-32")
 
 set(
   SRC
