--- a/openlr/openlr_tests/CMakeLists.txt
+++ b/openlr/openlr_tests/CMakeLists.txt
@@ -2,15 +2,21 @@ project(openlr_tests)
 
 set(
   SRC
-  openlr_sample_test.cpp
-  )
+  decoded_path_test.cpp
+)
 
 omim_add_test(${PROJECT_NAME} ${SRC})
 
 omim_link_libraries(
   ${PROJECT_NAME}
+  generator_tests_support
+  platform_tests_support
+  generator
+  routing
+  search
   openlr
   indexer
+  routing_common
   editor
   platform_tests_support
   platform
@@ -18,10 +24,12 @@ omim_link_libraries(
   geometry
   base
   jansson
+  tess2
   oauthcpp
   opening_hours
   pugixml
   stats_client
+  succinct
   protobuf
   icu
   ${Qt5Core_LIBRARIES}
