[core][search] cian search category review fixes

--- a/map/CMakeLists.txt
+++ b/map/CMakeLists.txt
@@ -25,6 +25,8 @@ set(
   chart_generator.hpp
   displacement_mode_manager.cpp
   displacement_mode_manager.hpp
+  displayed_categories_modifiers.cpp
+  displayed_categories_modifiers.hpp
   feature_vec_model.cpp
   feature_vec_model.hpp
   framework.cpp
