--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -85,11 +85,6 @@
       android:name="com.mapswithme.maps.SplashActivity"
       android:label="@string/app_name">
 
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
-
       <!-- standard "geo" scheme -->
       <intent-filter>
         <action android:name="android.intent.action.VIEW"/>
@@ -202,9 +197,19 @@
     </activity>
 
     <activity
-        android:name="com.mapswithme.maps.DownloadResourcesActivity"
+        android:name="com.mapswithme.maps.DownloadResourcesLegacyActivity"
         android:configChanges="orientation|screenLayout|screenSize"
         android:label="@string/app_name"/>
+
+    <activity-alias
+      android:name="com.mapswithme.maps.DownloadResourcesActivity"
+      android:label="@string/app_name"
+      android:targetActivity="com.mapswithme.maps.SplashActivity">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
+        <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
+    </activity-alias>
 
     <activity
         android:name="com.mapswithme.maps.MwmActivity"
