--- a/generator/CMakeLists.txt
+++ b/generator/CMakeLists.txt
@@ -108,6 +108,8 @@ add_library(${PROJECT_NAME} ${SRC})
 omim_add_test_subdirectory(generator_tests_support)
 omim_add_test_subdirectory(generator_tests)
 
+add_subdirectory(mwm_diff)
+
 if (NOT SKIP_GTOOL)
   add_subdirectory(generator_tool)
 endif()
