[generator] Add level metadata field and methods for the editor

--- a/data/editor.config
+++ b/data/editor.config
@@ -50,6 +50,10 @@
         <tag k="stars" />
         <value type="number" />
       </field>
+      <field name="level">
+        <tag k="level" />
+        <value type="number" />
+      </field>
       <field name="operator">
         <tag k="operator" />
       </field>
@@ -112,6 +116,7 @@
       <field_group name="poi_noname">
         <field_ref name="street" />
         <field_ref name="housenumber" />
+        <field_ref name="level" />
         <field_ref name="opening_hours" />
         <field_ref name="phone" />
         <field_ref name="email" />
@@ -121,6 +126,7 @@
         <field_ref name="name" />
         <field_ref name="street" />
         <field_ref name="housenumber" />
+        <field_ref name="level" />
         <field_ref name="opening_hours" />
         <field_ref name="phone" />
         <field_ref name="email" />
