Fix build pymodules on Linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,19 +125,22 @@ if (PYBINDINGS)
   endif()
   find_package(PythonLibs ${PYTHON_VERSION} REQUIRED)
   include_directories(${PYTHON_INCLUDE_DIRS})
+  set(SKIP_DESKTOP ON)
 endif()
 
-if (NOT PLATFORM_IPHONE AND NOT PLATFORM_ANDROID AND NOT PYBINDINGS)
+if (NOT PLATFORM_IPHONE AND NOT PLATFORM_ANDROID)
   find_package(Qt5Core)
   if (NOT Qt5Core_FOUND)
     message(FATAL_ERROR "Qt5 cmake files were not found, please set QT_PATH environment variable")
   endif()
   find_package(Qt5Network REQUIRED)
-  find_package(Qt5Gui REQUIRED)
-  find_package(Qt5OpenGL REQUIRED)
-  find_package(Qt5Widgets REQUIRED)
-  find_package(Qt5Xml REQUIRED)
-  find_package(Qt5Svg REQUIRED)
+  if(NOT SKIP_DESKTOP)
+    find_package(Qt5Gui REQUIRED)
+    find_package(Qt5OpenGL REQUIRED)
+    find_package(Qt5Widgets REQUIRED)
+    find_package(Qt5Xml REQUIRED)
+    find_package(Qt5Svg REQUIRED)
+  endif()
 endif()
 
 if (PLATFORM_LINUX)
