--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -280,6 +280,7 @@ add_subdirectory(3party/jansson)
 add_subdirectory(3party/minizip)
 add_subdirectory(3party/freetype)
 add_subdirectory(3party/icu)
+add_subdirectory(3party/agg)
 add_subdirectory(3party/expat)
 add_subdirectory(map)
 
@@ -329,7 +330,13 @@ add_subdirectory(partners_api)
 add_subdirectory(local_ads)
 add_subdirectory(ugc)
 
+option(BUILD_MAPSHOT "Build mapshot tool" OFF)
+
 if (PLATFORM_DESKTOP)
+  if (BUILD_MAPSHOT)
+    add_subdirectory(software_renderer)
+    add_subdirectory(mapshot)
+  endif()
   add_subdirectory(openlr)
   add_subdirectory(generator)
   add_subdirectory(skin_generator)
