Added diff scheme checker.

--- a/storage/CMakeLists.txt
+++ b/storage/CMakeLists.txt
@@ -15,6 +15,9 @@ set(
   country_name_getter.hpp
   country_polygon.hpp
   country_tree.hpp
+  diff_scheme_checker.cpp
+  diff_scheme_checker.hpp
+  diff_types.hpp
   downloader_search_params.hpp
   downloading_policy.cpp
   downloading_policy.hpp
