--- a/search/search_tests/CMakeLists.txt
+++ b/search/search_tests/CMakeLists.txt
@@ -15,8 +15,10 @@ set(
   locality_scorer_test.cpp
   locality_selector_test.cpp
   match_cost_mock.hpp
+  point_rect_matcher_tests.cpp
   query_saver_tests.cpp
   ranking_tests.cpp
+  segment_tree_tests.cpp
   string_intersection_test.cpp
   string_match_test.cpp
 )
