--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -310,6 +310,7 @@ add_subdirectory(3party/pugixml)
 add_subdirectory(3party/succinct)
 add_subdirectory(3party/osrm)
 add_subdirectory(3party/gflags)
+add_subdirectory(3party/bsdiff-courgette)
 add_subdirectory(base)
 add_subdirectory(coding)
 add_subdirectory(geometry)
