--- a/generator/mwm_diff/pymwm_diff/CMakeLists.txt
+++ b/generator/mwm_diff/pymwm_diff/CMakeLists.txt
@@ -10,6 +10,7 @@ add_library(${PROJECT_NAME} MODULE ${SRC})
 omim_link_libraries(
   ${PROJECT_NAME}
   mwm_diff
+  bsdiff
   platform
   coding
   base
