Added drape engine safe ptr

--- a/drape_frontend/CMakeLists.txt
+++ b/drape_frontend/CMakeLists.txt
@@ -80,6 +80,7 @@ set(
   drape_api_renderer.hpp
   drape_engine.cpp
   drape_engine.hpp
+  drape_engine_safe_ptr.hpp
   drape_hints.hpp
   drape_measurer.cpp
   drape_measurer.hpp
