--- a/storage/CMakeLists.txt
+++ b/storage/CMakeLists.txt
@@ -17,6 +17,8 @@ set(
   country_parent_getter.hpp
   country_polygon.hpp
   country_tree.hpp
+  diff_scheme/diff_manager.cpp
+  diff_scheme/diff_manager.hpp
   diff_scheme/diff_scheme_checker.cpp
   diff_scheme/diff_scheme_checker.hpp
   diff_scheme/diff_types.hpp
