--- a/routing/routing_integration_tests/CMakeLists.txt
+++ b/routing/routing_integration_tests/CMakeLists.txt
@@ -15,6 +15,7 @@ set(
   get_altitude_test.cpp
   online_cross_tests.cpp
   pedestrian_route_test.cpp
+  road_graph_tests.cpp
   route_test.cpp
   routing_test_tools.cpp
   routing_test_tools.hpp
